[metadata]
name = collectd-openstack-plugins
summary = OpenStack Ceilometer plugin for collectd.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[test]
test_suite=collectd_ceilometer.tests

[files]
packages =
    collectd_ceilometer
    collectd_gnocchi

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = collectd_ceilometer/locale
domain = collectd-openstack-plugins

[update_catalog]
domain = collectd-openstack-plugins
output_dir = collectd_ceilometer/locale
input_file = collectd_ceilometer/locale/collectd-openstack-plugins.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = collectd_ceilometer/locale/collectd-openstack-plugins.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
